# sar

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yaml  pixi.toml
.github/workflows/: ci.yaml
firmware/Theseus/: MotorWheel.cpp  PIDLib.txt  Theseus.ino
maps/: my_map.pgm  my_map.yaml  my_map_2.pgm  my_map_2.yaml
sar_bringup/: CMakeLists.txt  README.md  package.xml
sar_bringup/config/: real.yaml  sim.yaml
sar_bringup/launch/: real.launch.py  sim.launch.py
sar_control/: CMakeLists.txt  README.md  commands.txt  package.xml  sar_control.xml
sar_control/arduino/Theseus/: MotorWheel.h
sar_control/config/: controllers.yaml  controllers_sim.yaml  joystick.yaml  real_robot.rviz
sar_control/include/sar_control/: arduino_comms.hpp  sar_system.hpp
sar_control/launch/: control.launch.py  joystick.launch.py
sar_control/src/: arduino_comms.cpp  sar_system.cpp  test_hardware.cpp
sar_description/: CMakeLists.txt  README.md  package.xml
sar_description/launch/: description.launch.py
sar_description/meshes/: SAR2.dae  realsense.dae
sar_description/urdf/: body.urdf.xacro  gazebo.urdf.xacro  realsense.urdf.xacro  ros2_control.urdf.xacro  rplidar.urdf.xacro  sar_robot.urdf.xacro  wheel.urdf.xacro
sar_description/urdf/base/: body.urdf.xacro  wheel.urdf.xacro
sar_description/urdf/control/: ros2_control.urdf.xacro
sar_description/urdf/sensors/: realsense.urdf.xacro  rplidar.urdf.xacro
sar_exploration/: CMakeLists.txt  README.md  package.xml
sar_exploration/config/: config.yaml
sar_exploration/launch/: explore.launch.py
sar_gazebo/: README.md  package.xml  setup.cfg  setup.py
sar_gazebo/config/: gz_bridge.yaml  rosbot.rviz
sar_gazebo/launch/: gazebo.launch.py
sar_gazebo/models/ArucoBox/: model.sdf
sar_gazebo/models/ArucoBox/meshes/: ArucoBox.dae
sar_gazebo/models/aruco1/: model.sdf
sar_gazebo/models/arucobox/: model.config  model.sdf
sar_gazebo/models/arucobox/meshes/: ArucoBox.mtl
sar_gazebo/models/office/: model.config  model.sdf
sar_gazebo/models/office/meshes/: office.stl
sar_gazebo/worlds/: office.sdf
sar_mission/: README.md  package.xml  setup.cfg  setup.py
sar_mission/launch/: explore_and_detect.launch.py  search_and_detect.launch.py  search_and_rescue.launch.py  sweep_and_detect.launch.py
sar_mission/sar_mission/: coverage_planner.py  explore_and_detect.py  marker_monitor.py  search_and_detect.py  search_and_rescue.py  sweep_and_detect.py
sar_msgs/: CMakeLists.txt  README.md  package.xml
sar_msgs/msg/: ArucoMsg.msg
sar_perception/: README.md  package.xml  setup.cfg  setup.py
sar_perception/launch/: perception.launch.py
sar_perception/sar_perception/: aruco_detector.py
sar_rerun/: CMakeLists.txt  package.xml
sar_rerun/launch/: rerun.launch.py
sar_rerun/src/: rerun_bridge.cpp
sar_slam/: CMakeLists.txt  README.md  package.xml
sar_slam/config/: config.yaml
sar_slam/launch/: slam.launch.py
sar_utils/: CMakeLists.txt  README.md  package.xml
sar_utils/config/: joystick.yaml  keyboard.txt
sar_utils/launch/: joystick.launch.py
scripts/: arduClone.rules  create_udev_rules.sh  delete_udev_rules.sh  install-deps.sh
scripts/calibration/: 1_data_acquisition.py  2_calibration.py  3_test_calibration.py
scripts/calibration/output/: camera_matrix.npy  dist_coeffs.npy
scripts/pid_tunner/: motors.m
