<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sar_bringup</name>
  <version>0.0.1</version>
  <description>Top-level bringup launch files for the SAR robot</description>
  <maintainer email="alvgaona@gmail.com">Alvaro Gaona</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>sar_control</exec_depend>
  <exec_depend>sar_description</exec_depend>
  <exec_depend>sar_exploration</exec_depend>
  <exec_depend>sar_gazebo</exec_depend>
  <exec_depend>sar_perception</exec_depend>
  <exec_depend>sar_slam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
